styles/book.css
*{
    box-sizing: border-box;
    margin: 0;
}
.book {
    width: 300px;
    min-height: 575px;

    background-color: rgb(7, 81, 106);

    border-radius: 10px;

    font-family: 'Figtree';
    color: floralwhite;

    overflow: hidden;
}

h3 {
    height: 70px;

    display: flex;
    align-items: center;
    justify-content: center;
}

.book-title, 
.img-wrapper,
.book-content
 {
    border-bottom: solid 1px rgb(172, 212, 225);
    padding: 5px;
}

.img-wrapper {
    position: relative;
    background-color: rgba(41, 116, 141);

    height: 110px;
}

.bg-img {
    position: absolute;
    z-index: 1;
    background-color: rgb(96, 176, 203);
    filter: blur(10px);

    width: 100%;
    height: 100%;
}

.book-img {
    position: absolute;
    z-index: 2;

    width: 100px;
    height: auto;

    /* img zentrieren */
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.book-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 10px;

    height: 150px;
}

.book-price-likes {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.book-price-likes>p {
    color: #FD5B4F;
    font-weight: bold;
}

.book-likes {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 5px;
}

/* https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Properties/font-variant-numeric */
.like-displayer {
    font-variant-numeric: tabular-nums;
}

table {
    font-weight: normal;
}

th {
    text-align: start;
    vertical-align: baseline;

    font-weight: normal;
}

td {
    overflow-wrap: break-word;

    text-indent: -8px;
}

.book-comments {
    height: 225px;

    padding: 5px;

    font-weight: bold;

    display: flex;
    flex-direction: column;
    
    justify-content: space-between;
}

.input-container {
    display: flex;
   justify-content: space-between;
}

.input-container svg {
    width: 25px;
    height: auto;

    fill: rgb(172, 212, 225);
}

.send-comment-btn{
    display: flex;
    align-items: center;
    justify-content: center;
}

input {
    padding: 5px;

    width: 100%;

    background-color: rgba(41, 116, 141);

    border-top: solid 2px rgb(7, 81, 106);
    border-left: solid 2px rgb(7, 81, 106);
    border-right: solid 2px rgb(7, 81, 106);
    border-bottom: solid 2px rgb(172, 212, 225);
    border-radius: 5px;

    color: floralwhite;

}

input::placeholder {
    color: rgb(172, 212, 225);
}

input:focus {
    outline: none;
    border: solid 2px rgb(172, 212, 225);
}

.display-comments {
    color: floralwhite;
    font-family: 'Figtree';
    font-size: 16px;

    background-color: rgb(7, 81, 106);

    height: 100px;
    padding: 5px;

    overflow-y: scroll;
    overflow-x: hidden;
}

/* Scrollbar: https://css-tricks.com/custom-scrollbars-in-webkit/ */
.display-comments::-webkit-scrollbar {
    width: 5px;
}

.display-comments::-webkit-scrollbar-track {
    background-color: black;
}

.display-comments::-webkit-scrollbar-thumb {
    background-color: rgb(209, 232, 239);
}

